# mySingular

./: README.md
my_singular/simple_singular/: CMakeCache.txt  CMakeLists.txt  MaincopyI.cpp  Makefile  cmake_install.cmake  install.sh  run.sh
my_singular/simple_singular/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  simple_singular
my_singular/simple_singular/src/: main copy 2.cpp  main copy.cpp  main.cpp
